# screening-system

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: celery.py  env_settings.py  settings.py  urls.py
app/grpc/: candidate_pb2.py  candidate_pb2_grpc.py  handlers.py  serializers.py  services.py
app/grpc/proto/: candidate.proto
screening/: admin.py  apps.py  models.py  tasks.py  typing.py  urls.py  utils.py
screening/management/commands/: grpc_runserver.py
screening/migrations/: 0001_initial.py
screening/v1/: serializers.py  urls.py  views.py
scripts/: start.sh
