[project]
name = "screening-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Giulio Indennitate",email = "giulio.indennitate@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.1.5)",
    "djangorestframework (==3.16.0)",
    "django-cors-headers (==4.6.0)",
    "psycopg2-binary (==2.9.10)",
    "drf-spectacular (==0.28.0)",
    "drf-standardized-errors[openapi] (==0.14.1)",
    "django-health-check (==3.18.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-stubs = "5.2.0"
mypy = "1.15.0"
djangorestframework-stubs = "3.16.0"
pytest = "8.3.4"
pytest-mock = "3.14.0"
pytest-cov = "6.0.0"
pytest-django = "4.9.0"
ruff = "0.9.3"
pytest-sugar = "1.0.0"
model-bakery = "1.20.1"
debugpy = "1.8.12"

